Clean up host determination logic. Restyle player lobby. Fix unreadable player lobby names.

--- a/public/style.css
+++ b/public/style.css
@@ -186,10 +186,11 @@ background-color: #333;
 
 .lobbyPlayerListItem {
     text-align: center;
+    font-weight: bold;
     margin: 10px;
-    width: 100px;
+    min-width: 100px;
     padding: 10px 16px;
-    font-size: 16px;
+    font-size: 20px;
     border: none;
     border-radius: 16px;
     background-color: rgb(46, 46, 46);
